@@ -9,7 +9,7 @@ Scene Builder: https://gluonhq.com/products/scene-builder/thanks/?dl=https://dow
 3. Mouse right click project, Build Path --> Configure Build Path...</BR>
 4. Libraries Tab --> Classpath --> Add Library... --> User Library -->JavaFX24</BR>
 5. Click Run --> Run Configuration --> (x)=Arguments </BR>
-6. VM arguments = --module-path "C:\Program Files\Java\javafx-sdk-24\lib" --add-modules javafx.controls,javafx.fxml</BR>
+6. VM arguments = --module-path "C:\Program Files\Java\javafx-sdk-24\lib" --add-modules javafx.controls,javafx.fxml --enable-native-access=javafx.graphics</BR>
 7. Click Dependencies Tab --> Click Modulepath Entries  --> Click Advance --> Select Add Library --> User Library --> JavaFX24</BR>
 
 
